# GeoSnap-Camera-nativo

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_processing.cpp  native_processing.h
app/src/main/kotlin/com/andrives/geosnap_cam/: GeoSnapApp.kt  MainActivity.kt  NativeEngine.kt
app/src/main/kotlin/com/andrives/geosnap_cam/data/model/: LocationData.kt  WatermarkConfig.kt
app/src/main/kotlin/com/andrives/geosnap_cam/data/repository/: WatermarkSettingsRepository.kt
app/src/main/kotlin/com/andrives/geosnap_cam/di/: AppModule.kt
app/src/main/kotlin/com/andrives/geosnap_cam/media/: GeoSnapVideoMuxer.kt  MediaSaver.kt  PhotoWatermarkProcessor.kt  VideoRecorderController.kt  VideoWatermarkProcessor.kt  WatermarkRenderer.kt  WatermarkService.kt
app/src/main/kotlin/com/andrives/geosnap_cam/service/: AnalyticsService.kt  LocationService.kt  MapTileService.kt  PermissionManager.kt
app/src/main/kotlin/com/andrives/geosnap_cam/ui/component/: UpdateBanner.kt
app/src/main/kotlin/com/andrives/geosnap_cam/ui/navigation/: NavGraph.kt
app/src/main/kotlin/com/andrives/geosnap_cam/util/: CoordinateFormatter.kt  DateFormatter.kt  FlagEmoji.kt  InAppUpdateManager.kt
app/src/main/res/drawable/: ic_flash_auto_oneui.xml  ic_flash_off_oneui.xml  ic_flash_on_oneui.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: file_provider_paths.xml
gradle/: libs.versions.toml
(+22 files in other folders)
